--- a/index.html
+++ b/index.html
@@ -507,10 +507,15 @@
                         <p><strong>Tech Stack:</strong> ETL, Oracle HCM, OCI, Spring Boot, Data Warehousing</p>
                         <ul>
                             <li>Pioneered complete database infrastructure for GSPT with 1.03-second query latency</li>
+                            <li>Enhanced backend systems for the GSPT project by integrating APIs and streamlining the Spring Boot framework into a cohesive and
+                                maintainable architecture</li>
                             <li>Created 500+ APIs for employee severance workflows, reducing manual tracking by 40%</li>
                             <li>Engineered middleware reducing HCM Payroll file creation from 1.5 hours to 17 seconds</li>
                             <li>Consolidated 63 data flows into unified Oracle HCM pipeline</li>
                             <li>Built CI/CD pipeline cutting deployment time and boosting data rendering by 30%</li>
+                            <li>Mentored 6 interns, leading to 3 full-time hires</li>
+                            <li>Created 10+ process workflows for new systems, leading communication across cross-functional teams and leadership</li>
+                            <li>Received Spot Award for outstanding contributions in Q1 2024</li>
                         </ul>
                     </div>
                 </div>
@@ -527,7 +532,23 @@
                         <ul>
                             <li>Modeled log-likelihood ratio based Global Change-point Detector with Transformer Hawkes Process</li>
                             <li>Achieved 53% and 11% improvement in Normalized Average Error</li>
-                            <li>Published in AISTATS 2023, PMLR, Vol. 206</li>
+                            <li>Published Differentiable Change-Point Detection with Temporal Point Processes in AISTATS 2023, PMLR, Vol. 206</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="card">
+                        <h3>Summer Associate - BNY</h3>
+                        <div class="meta">
+                            <span>📍 Pune, India</span>
+                            <span>📅 May 2021 – July 2021</span>
+                        </div>
+                        <p><strong>Team:</strong> HR Engineering</p>
+                        <p><strong>Tech Stack:</strong> ETL, Oracle HCM, OCI, Spring Boot, Data Warehousing</p>
+                        <ul>
+                            <li>Implemented 527 REST API endpoints using Spring Boot framework to provide a gateway server that facilitates secure communication
+                                between two SAAS applications and prevents security breaches</li>
                         </ul>
                     </div>
                 </div>
