--- a/index.html
+++ b/index.html
@@ -422,6 +422,13 @@
 
     <section id="home" class="hero">
         <div class="container">
+            <div style="margin-bottom: 2rem; animation: fadeInUp 1s;">
+                <img 
+                    src="https://github.com/harsha2225.png" 
+                    alt="Harshavardhan Alimi"
+                    style="width: 200px; height: 200px; border-radius: 50%; border: 4px solid var(--primary); box-shadow: 0 10px 40px rgba(99, 102, 241, 0.4); object-fit: cover; margin: 0 auto; display: block;"
+                >
+            </div>
             <h1>Harshavardhan Alimi</h1>
             <p class="subtitle">ML Engineer & Researcher | USC Computer Science</p>
             <p class="tagline">Specializing in LLMs, NLP, and AI Systems</p>
