--- a/index.html
+++ b/index.html
@@ -39,47 +39,71 @@
             height: 100%;
             z-index: -1;
             overflow: hidden;
+            background: radial-gradient(ellipse at top, #1e293b 0%, #0f172a 50%, #020617 100%);
         }
 
         .gradient-orb {
             position: absolute;
             border-radius: 50%;
-            filter: blur(80px);
-            opacity: 0.3;
-            animation: float 20s infinite;
+            filter: blur(100px);
+            opacity: 0.15;
+            animation: float 25s infinite ease-in-out;
         }
 
         .orb1 {
-            width: 500px;
-            height: 500px;
-            background: var(--primary);
-            top: -250px;
-            left: -250px;
+            width: 600px;
+            height: 600px;
+            background: radial-gradient(circle, #6366f1 0%, #4f46e5 50%, transparent 70%);
+            top: -300px;
+            left: -200px;
             animation-delay: 0s;
         }
 
         .orb2 {
-            width: 400px;
-            height: 400px;
-            background: var(--secondary);
-            bottom: -200px;
-            right: -200px;
-            animation-delay: 5s;
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, #8b5cf6 0%, #7c3aed 50%, transparent 70%);
+            bottom: -250px;
+            right: -150px;
+            animation-delay: 8s;
         }
 
         .orb3 {
-            width: 300px;
-            height: 300px;
-            background: var(--accent);
-            top: 50%;
-            left: 50%;
-            animation-delay: 10s;
+            width: 450px;
+            height: 450px;
+            background: radial-gradient(circle, #ec4899 0%, #db2777 50%, transparent 70%);
+            top: 40%;
+            left: 60%;
+            animation-delay: 16s;
         }
 
         @keyframes float {
-            0%, 100% { transform: translate(0, 0) scale(1); }
-            33% { transform: translate(100px, -100px) scale(1.1); }
-            66% { transform: translate(-100px, 100px) scale(0.9); }
+            0%, 100% { 
+                transform: translate(0, 0) scale(1);
+                opacity: 0.15;
+            }
+            25% { 
+                transform: translate(150px, -150px) scale(1.2);
+                opacity: 0.25;
+            }
+            50% { 
+                transform: translate(80px, 100px) scale(0.8);
+                opacity: 0.1;
+            }
+            75% { 
+                transform: translate(-120px, 50px) scale(1.1);
+                opacity: 0.2;
+            }
+        }
+
+        #particles {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            pointer-events: none;
         }
 
         nav {
@@ -371,6 +395,11 @@
             color: var(--text-secondary);
         }
 
+        .gpa-highlight {
+            color: var(--accent);
+            font-weight: bold;
+        }
+
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 2.5rem;
@@ -393,11 +422,6 @@
                 padding: 4rem 0;
             }
         }
-
-        .gpa-highlight {
-            color: var(--accent);
-            font-weight: bold;
-        }
     </style>
 </head>
 <body>
@@ -406,6 +430,7 @@
         <div class="gradient-orb orb2"></div>
         <div class="gradient-orb orb3"></div>
     </div>
+    <canvas id="particles"></canvas>
 
     <nav>
         <div class="container">
@@ -514,8 +539,7 @@
                         <p><strong>Tech Stack:</strong> ETL, Oracle HCM, OCI, Spring Boot, Data Warehousing</p>
                         <ul>
                             <li>Pioneered complete database infrastructure for GSPT with 1.03-second query latency</li>
-                            <li>Enhanced backend systems for the GSPT project by integrating APIs and streamlining the Spring Boot framework into a cohesive and
-                                maintainable architecture</li>
+                            <li>Enhanced backend systems for the GSPT project by integrating APIs and streamlining the Spring Boot framework into a cohesive and maintainable architecture</li>
                             <li>Created 500+ APIs for employee severance workflows, reducing manual tracking by 40%</li>
                             <li>Engineered middleware reducing HCM Payroll file creation from 1.5 hours to 17 seconds</li>
                             <li>Consolidated 63 data flows into unified Oracle HCM pipeline</li>
@@ -554,8 +578,7 @@
                         <p><strong>Team:</strong> HR Engineering</p>
                         <p><strong>Tech Stack:</strong> ETL, Oracle HCM, OCI, Spring Boot, Data Warehousing</p>
                         <ul>
-                            <li>Implemented 527 REST API endpoints using Spring Boot framework to provide a gateway server that facilitates secure communication
-                                between two SAAS applications and prevents security breaches</li>
+                            <li>Implemented 527 REST API endpoints using Spring Boot framework to provide a gateway server that facilitates secure communication between two SAAS applications and prevents security breaches</li>
                         </ul>
                     </div>
                 </div>
@@ -710,6 +733,61 @@
     </footer>
 
     <script>
+        // Particle system
+        const canvas = document.getElementById('particles');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        class Particle {
+            constructor() {
+                this.x = Math.random() * canvas.width;
+                this.y = canvas.height + 10;
+                this.size = Math.random() * 2 + 0.5;
+                this.speedY = Math.random() * 1 + 0.3;
+                this.speedX = Math.random() * 0.5 - 0.25;
+                this.opacity = Math.random() * 0.5 + 0.2;
+                this.color = ['#6366f1', '#8b5cf6', '#ec4899'][Math.floor(Math.random() * 3)];
+            }
+
+            update() {
+                this.y -= this.speedY;
+                this.x += this.speedX;
+                if (this.y < -10) {
+                    this.y = canvas.height + 10;
+                    this.x = Math.random() * canvas.width;
+                }
+            }
+
+            draw() {
+                ctx.fillStyle = this.color;
+                ctx.globalAlpha = this.opacity;
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                ctx.fill();
+            }
+        }
+
+        const particles = Array.from({ length: 80 }, () => new Particle());
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            particles.forEach(particle => {
+                particle.update();
+                particle.draw();
+            });
+            ctx.globalAlpha = 1;
+            requestAnimationFrame(animate);
+        }
+
+        animate();
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        });
+
+        // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
@@ -723,6 +801,7 @@
             });
         });
 
+        // Intersection observer for animations
         const observerOptions = {
             threshold: 0.1,
             rootMargin: '0px 0px -100px 0px'
